Bug 1152260 - Generate focused event for drivers that do not notify us when using continuous auto focus. r=mikeh, a=bajaj