dom/camera/GonkCameraControl.h
@@ -28,6 +28,8 @@
 #include "GonkCameraHwMgr.h"
 #include "GonkCameraParameters.h"
 
+class nsITimer;
+
 namespace android {
   class GonkCameraHardware;
   class MediaProfiles;
@@ -50,7 +52,8 @@ class nsGonkCameraControl : public CameraControlImpl
 public:
   nsGonkCameraControl(uint32_t aCameraId);
 
-  void OnAutoFocusComplete(bool aSuccess);
+  void OnAutoFocusMoving(bool aIsMoving);
+  void OnAutoFocusComplete(bool aSuccess, bool aExpired);
   void OnFacesDetected(camera_frame_metadata_t* aMetaData);
   void OnTakePictureComplete(uint8_t* aData, uint32_t aLength);
   void OnTakePictureError();
@@ -188,6 +191,10 @@ protected:
 
   nsRefPtr<DeviceStorageFile> mVideoFile;
   nsString                  mFileFormat;
+
+  bool                      mAutoFocusPending;
+  nsCOMPtr<nsITimer>        mAutoFocusCompleteTimer;
+  int32_t                   mAutoFocusCompleteExpired;
 
   // Guards against calling StartPreviewImpl() while in OnTakePictureComplete().
   ReentrantMonitor          mReentrantMonitor;
